{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 22,
  "lineage": "e69cf4c4-868b-4891-813a-5cdf1240455f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ff66a34eb0e783d",
            "arn": "arn:aws:ec2:ap-south-1:339712919806:elastic-ip/eipalloc-04ff66a34eb0e783d",
            "domain": "vpc",
            "id": "eipalloc-04ff66a34eb0e783d",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-201-252-92.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.252.92",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "expense-split-nat-eip-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-nat-eip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002a915bde81a17e0",
            "arn": "arn:aws:ec2:ap-south-1:339712919806:elastic-ip/eipalloc-002a915bde81a17e0",
            "domain": "vpc",
            "id": "eipalloc-002a915bde81a17e0",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-203-52-139.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.52.139",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "expense-split-nat-eip-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-nat-eip-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712919806:internet-gateway/igw-040c7dc3f60e591ec",
            "id": "igw-040c7dc3f60e591ec",
            "owner_id": "339712919806",
            "tags": {
              "Environment": "production",
              "Name": "expense-split-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-igw"
            },
            "vpc_id": "vpc-0eae92b0f713ea7e6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ff66a34eb0e783d",
            "association_id": "eipassoc-086cf1abbde08f2b0",
            "connectivity_type": "public",
            "id": "nat-0a688e601fba5d2f2",
            "network_interface_id": "eni-0dfc0408c0fe2a301",
            "private_ip": "10.0.0.62",
            "public_ip": "13.201.252.92",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04a665b3b0c98f3d4",
            "tags": {
              "Environment": "production",
              "Name": "expense-split-nat-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-nat-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002a915bde81a17e0",
            "association_id": "eipassoc-051189563092ea5b9",
            "connectivity_type": "public",
            "id": "nat-0f7af5d372c9f6cd9",
            "network_interface_id": "eni-0d846f559f4a457a8",
            "private_ip": "10.0.1.215",
            "public_ip": "13.203.52.139",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cbbe7fa98076839e",
            "tags": {
              "Environment": "production",
              "Name": "expense-split-nat-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-nat-2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712919806:route-table/rtb-0b4bbc51efd609429",
            "id": "rtb-0b4bbc51efd609429",
            "owner_id": "339712919806",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a688e601fba5d2f2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "expense-split-private-rt-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eae92b0f713ea7e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712919806:route-table/rtb-0fe598d3931e1781b",
            "id": "rtb-0fe598d3931e1781b",
            "owner_id": "339712919806",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f7af5d372c9f6cd9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "expense-split-private-rt-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eae92b0f713ea7e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712919806:route-table/rtb-0ecbba541e04a307d",
            "id": "rtb-0ecbba541e04a307d",
            "owner_id": "339712919806",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-040c7dc3f60e591ec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "expense-split-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eae92b0f713ea7e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d864835cc223a3a",
            "route_table_id": "rtb-0b4bbc51efd609429",
            "subnet_id": "subnet-0b4e3f7581423dd3b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c419d190c1959edd",
            "route_table_id": "rtb-0fe598d3931e1781b",
            "subnet_id": "subnet-0d04bfe45372e9d52"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f3cf4870b687aeb",
            "route_table_id": "rtb-0ecbba541e04a307d",
            "subnet_id": "subnet-04a665b3b0c98f3d4"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d001638f7d6bccc9",
            "route_table_id": "rtb-0ecbba541e04a307d",
            "subnet_id": "subnet-0cbbe7fa98076839e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712919806:security-group/sg-048d255db7eb3a89a",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048d255db7eb3a89a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "expense-split-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "339712919806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "expense-split-vpc-endpoints-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-vpc-endpoints-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eae92b0f713ea7e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712919806:subnet/subnet-0b4e3f7581423dd3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4e3f7581423dd3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712919806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "expense-split-private-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-private-1"
            },
            "vpc_id": "vpc-0eae92b0f713ea7e6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712919806:subnet/subnet-0d04bfe45372e9d52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d04bfe45372e9d52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712919806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "expense-split-private-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-private-2"
            },
            "vpc_id": "vpc-0eae92b0f713ea7e6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712919806:subnet/subnet-04a665b3b0c98f3d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a665b3b0c98f3d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712919806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "expense-split-public-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-public-1"
            },
            "vpc_id": "vpc-0eae92b0f713ea7e6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712919806:subnet/subnet-0cbbe7fa98076839e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbbe7fa98076839e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712919806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "expense-split-public-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-public-2"
            },
            "vpc_id": "vpc-0eae92b0f713ea7e6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712919806:vpc/vpc-0eae92b0f713ea7e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0de3597588100901d",
            "default_route_table_id": "rtb-01066f70014b94b82",
            "default_security_group_id": "sg-01931b4897af1fcfb",
            "dhcp_options_id": "dopt-037bf216070e85de1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eae92b0f713ea7e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01066f70014b94b82",
            "owner_id": "339712919806",
            "tags": {
              "Environment": "production",
              "Name": "expense-split-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712919806:vpc-endpoint/vpce-0d931c3771058b63d",
            "dns_entry": [
              {
                "dns_name": "vpce-0d931c3771058b63d-clqvxcl4.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0d931c3771058b63d-clqvxcl4-ap-south-1a.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0d931c3771058b63d-clqvxcl4-ap-south-1b.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "api.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z07091143J5RC73YF86V5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d931c3771058b63d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01f38ceb8d53faeab",
              "eni-0a246172a7149b449"
            ],
            "owner_id": "339712919806",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048d255db7eb3a89a"
            ],
            "service_name": "com.amazonaws.ap-south-1.ecr.api",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.34",
                "subnet_id": "subnet-0b4e3f7581423dd3b"
              },
              {
                "ipv4": "10.0.3.27",
                "subnet_id": "subnet-0d04bfe45372e9d52"
              }
            ],
            "subnet_ids": [
              "subnet-0b4e3f7581423dd3b",
              "subnet-0d04bfe45372e9d52"
            ],
            "tags": {
              "Environment": "production",
              "Name": "expense-split-ecr-api-endpoint"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-ecr-api-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0eae92b0f713ea7e6"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712919806:vpc-endpoint/vpce-09bdf1a4048ba0209",
            "dns_entry": [
              {
                "dns_name": "vpce-09bdf1a4048ba0209-wfur1k21.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-09bdf1a4048ba0209-wfur1k21-ap-south-1a.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-09bdf1a4048ba0209-wfur1k21-ap-south-1b.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "dkr.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z07319001VJGMXWH0HB4J"
              },
              {
                "dns_name": "*.dkr.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z07319001VJGMXWH0HB4J"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09bdf1a4048ba0209",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0ce90be7e439fad75",
              "eni-0d82bbbd96b70d913"
            ],
            "owner_id": "339712919806",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-048d255db7eb3a89a"
            ],
            "service_name": "com.amazonaws.ap-south-1.ecr.dkr",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.141",
                "subnet_id": "subnet-0b4e3f7581423dd3b"
              },
              {
                "ipv4": "10.0.3.243",
                "subnet_id": "subnet-0d04bfe45372e9d52"
              }
            ],
            "subnet_ids": [
              "subnet-0b4e3f7581423dd3b",
              "subnet-0d04bfe45372e9d52"
            ],
            "tags": {
              "Environment": "production",
              "Name": "expense-split-ecr-dkr-endpoint"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-ecr-dkr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0eae92b0f713ea7e6"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712919806:vpc-endpoint/vpce-030ff589f11bfd999",
            "cidr_blocks": [
              "52.219.156.0/22",
              "52.219.160.0/23",
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "16.12.40.0/23",
              "52.219.64.0/22",
              "16.12.36.0/22"
            ],
            "id": "vpce-030ff589f11bfd999",
            "owner_id": "339712919806",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.ap-south-1.s3",
            "state": "available",
            "tags": {
              "Environment": "production",
              "Name": "expense-split-s3-endpoint"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "expense-split-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0eae92b0f713ea7e6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}